# sangokushi4

./: Cargo.toml  README.md  prompts.md
.mimocode/plans/: 1781628364468-silent-circuit.md
crates/s4-app/: Cargo.toml
crates/s4-app/src/: game_loop.rs  init.rs  input.rs  main.rs  platform.rs  renderer.rs
crates/s4-core/: Cargo.toml
crates/s4-core/src/: lib.rs
crates/s4-core/src/ai/: decision.rs  mod.rs  movement.rs  scoring.rs
crates/s4-core/src/battle/: mod.rs
crates/s4-core/src/city/: mod.rs
crates/s4-core/src/data/: city.rs  faction.rs  game_state.rs  map.rs  mod.rs  officer.rs  unit.rs
crates/s4-core/src/map/: mod.rs
crates/s4-core/src/round/: mod.rs
crates/s4-core/src/scene/: mod.rs
crates/s4-core/tests/: battle_integration.rs  game_flow_integration.rs
crates/s4-platform/: Cargo.toml
crates/s4-platform/src/: lib.rs  traits.rs
crates/s4-render/: Cargo.toml
crates/s4-render/src/: fade.rs  font.rs  lib.rs  palette.rs  tile.rs  viewport.rs
crates/s4-resource/: Cargo.toml
crates/s4-resource/src/: bitstream.rs  lib.rs  loader.rs  lzss.rs
crates/s4-ui/: Cargo.toml
crates/s4-ui/src/: dialog.rs  entity.rs  lib.rs  widget.rs
specs/: architecture_design.md  specs_combined.md
